--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,15 +83,17 @@ protobuf {
 
  
 // Dependency resolution to avoid BouncyCastle duplicates
-configurations.all {
+configurations.configureEach {
     exclude group: 'org.bouncycastle', module: 'bcprov-jdk15to18'
-    resolutionStrategy {
-        force 'org.bouncycastle:bcprov-jdk15on:1.70'
-        force 'org.bouncycastle:bcpkix-jdk15on:1.70'
-    }
 }
 
 dependencies {
+    // Dependency constraints to avoid BouncyCastle conflicts
+    constraints {
+        implementation('org.bouncycastle:bcprov-jdk15on:1.70')
+        implementation('org.bouncycastle:bcpkix-jdk15on:1.70')
+    }
+
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
@@ -128,6 +130,9 @@ dependencies {
     implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
     implementation 'net.sf.scuba:scuba-sc-android:0.0.23'
+
+    // SLF4J Android binding for JMRTD logging
+    implementation 'org.slf4j:slf4j-android:1.7.36'
     
     // For handling images in passport
     implementation 'com.github.mhshams:jnbis:1.1.0'
