feat(nfc): implement NFC passport scanning with JMRTD integration
- Update JMRTD library from 0.7.18 to 0.7.35 for improved passport reading
- Add NFC tech discovery intent filters and singleTop launch mode to HostActivity
- Implement fragment navigation handling for NFC-initiated flows
- Remove legacy PassportScannerFragment (748 lines) in favor of new implementation
- Add debug logging for ANML registration flow
- Configure network security for local development backend (10.189.84.13)
- Switch backend URL to local development server for testing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,11 +38,18 @@
             android:name=".ui.host.HostActivity"
             android:exported="true"
             android:theme="@style/Theme.EarthWallet"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.nfc.action.TECH_DISCOVERED"
+                android:resource="@xml/nfc_tech_filter" />
         </activity>
 
         
