refactor(nfc): downgrade JMRTD library and remove passport scanner implementation
Downgrade JMRTD library from 0.7.35 to 0.7.18 for stability and remove the complete PassportScannerFragment implementation. This removes 975 lines of NFC passport scanning functionality including MRZ data handling, backend verification, and UI components.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,8 +118,8 @@ dependencies {
     // Remove these - not needed for icons
     implementation('org.bitcoinj:bitcoinj-core:0.16.3') { exclude group: 'org.bouncycastle' }
     
-    // JMRTD library for reading ePassports - latest version
-    implementation ('org.jmrtd:jmrtd:0.7.35') {
+    // JMRTD library for reading ePassports - stable version
+    implementation ('org.jmrtd:jmrtd:0.7.18') {
         exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
         exclude group: 'org.bouncycastle', module: 'bcprov-jdk14'
         exclude group: 'org.bouncycastle', module: 'bcpkix-jdk15on'
