feat(release): configure production build with signing and AdMob integration
- Add keystore configuration for release signing
- Update AdMob app ID from test to production
- Refactor ForceUpdateDialog to use AlertDialog with simplified UI
- Enable custom update URL endpoint for version checking
- Clean up debug logging statements across multiple components
- Simplify update dialog layout and interaction flow

BREAKING CHANGE: ForceUpdateDialog API changed from static methods to instance-based approach

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,13 @@ plugins {
     id 'com.google.protobuf' // Protobuf generation plugin
 }
 
+// Load keystore properties
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+def keystoreProperties = new Properties()
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace = 'com.example.earthwallet'
     compileSdk = 34
@@ -19,10 +26,26 @@ android {
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            if (keystorePropertiesFile.exists()) {
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+                storeFile file(keystoreProperties['storeFile'])
+                storePassword keystoreProperties['storePassword']
+            }
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled = false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+
+            // Add version info to APK name for release tracking
+            applicationIdSuffix ""
+            versionNameSuffix ""
         }
     }
     compileOptions {
