--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
-android.suppressUnsupportedCompileSdk=34
+android.suppressUnsupportedCompileSdk=34,35
