refactor(bridge): replace SecretQueryService and SnipQueryService with SecretKClient
- Remove SecretQueryService.kt and SnipQueryService.kt files
- Update all fragments to use SecretKClient for contract queries
- Add new methods to SecretKClient for JSON queries and SNIP-20 permit-based queries
- Integrate local SecretK via composite build in settings.gradle
- Update build.gradle to use local SecretK dependency

This refactor centralizes Secret Network interactions through SecretKClient, eliminating custom HTTP implementations and improving maintainability. All existing query functionality is preserved with improved error handling and permit support.

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,8 @@ dependencyResolutionManagement {
 }
 rootProject.name = "PassportScanner"
 include ':app'
+includeBuild('secretk-source') {
+    dependencySubstitution {
+        substitute module('io.eqoty.secretk:client') using project(':client')
+    }
+}
