--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,15 +44,17 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.nfc.action.TECH_DISCOVERED" />
-            </intent-filter>
-            <meta-data
-                android:name="android.nfc.action.TECH_DISCOVERED"
-                android:resource="@xml/nfc_tech_filter" />
         </activity>
 
-        
+        <!-- NFC Scanner Activity - handles all NFC scanning -->
+        <activity
+            android:name=".ui.pages.anml.NFCScannerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.EarthWallet"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop" />
+
+
 
 
         
