--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,6 +170,10 @@ dependencies {
     
     // Google AdMob for advertisements
     implementation 'com.google.android.gms:play-services-ads:22.6.0'
+
+    // Google Play In-App Updates
+    implementation 'com.google.android.play:app-update:2.1.0'
+    implementation 'com.google.android.play:app-update-ktx:2.1.0'
     
     // ML Kit Text Recognition for camera-based MRZ scanning
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
