--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:theme="@style/Theme.EarthWallet"
         android:usesCleartextTraffic="false"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:pageSizeCompat="enabled"
         tools:targetApi="31">
         
         <!-- AdMob App ID (production) -->
