feat(transaction): implement "Ads for Gas" feature with rewarded ads support build: bump version to 1.0.14 and update dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId = "network.erth.wallet"
         minSdk = 24
         targetSdk = 36
-        versionCode = 18
-        versionName = "1.0.13"
+        versionCode = 19
+        versionName = "1.0.14"
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -189,7 +189,7 @@ dependencies {
     // JSON serialization for permits
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    // SecretK - Kotlin client for Secret Network
+    // SecretK - Kotlin client for Secret Network (local module with feeGranter fix)
     implementation 'io.eqoty.secretk:client-jvm:7.0.0'
 
     // Kotlinx serialization for permit serialization (used by SecretK)
