--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,16 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url = 'https://jitpack.io' }
+        maven { url = 'https://s01.oss.sonatype.org/content/repositories/releases/' }
+        maven { url = 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
     }
 }
 rootProject.name = "PassportScanner"
 include ':app'
+
+// Include secretk as composite build (local module with feeGranter fix)
+includeBuild('secretk') {
+    dependencySubstitution {
+        substitute module('io.eqoty.secretk:client-jvm') using project(':client')
+    }
+}
